Добавляет получение баланса кошельков пользователя
