# internal/dto/wallets.go
@@ -1,0 +1,7 @@
+package dto
+
+import "gw-currency-wallet/internal/models"
+
+type GetWalletsResponse struct {
+	Balance models.AccountWallets `json:"balance"`
+}
